--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
         #second>div:nth-child(5)>div:nth-child(1) {
             cursor: pointer;
-            margin-left: -10px;
+            margin-left: 0px;
             height: 40px;
             width: 220px;
             background-color: #ff4f74;
@@ -676,54 +676,135 @@
         #sixth>div:nth-child(2)>div:nth-child(1)>div:nth-child(4)>div:nth-child(2)>i:nth-child(2) {
             margin-left: 20px;
         }
+
         #sixth>div:nth-child(2)>div:nth-child(2) {
             margin-top: 15px;
         }
+
         #sixth>div:nth-child(2)>div:nth-child(2)>div:nth-child(1) {
             font-size: 13px;
         }
+
         #sixth>div:nth-child(2)>div:nth-child(2)>div:nth-child(2) {
             margin-top: 7px;
             margin-left: 0;
         }
+
         #sixth>div:nth-child(2)>div:nth-child(2)>div:nth-child(2)>img {
             height: 60px;
             width: 60px;
         }
+
         #sixth>div:nth-child(2)>div:nth-child(2)>div:nth-child(3) {
             margin-top: 5px;
             display: flex;
             font-size: 13px;
             margin-left: 0;
         }
+
         #sixth>div:nth-child(2)>div:nth-child(2)>div:nth-child(3)>div:nth-child(2) {
             margin-left: 190px;
         }
+
         #sixth>div:nth-child(2)>div:nth-child(2)>div:nth-child(3)>div:nth-child(2)>i:nth-child(2) {
             margin-left: 20px;
         }
-        #seventh{
+
+        #seventh {
             margin-top: 15px;
             margin-left: 0;
             font-size: 13px;
             height: 120px;
             border-bottom: 0.5px white;
         }
-        #seventh>div:nth-child(1){
+
+        #seventh>div:nth-child(1) {
             color: #ff4f74;
             font-weight: bold;
         }
-        #seventh>div:nth-child(2){
+
+        #seventh>div:nth-child(2) {
             margin-top: 15px;
         }
-        #seventh>div:nth-child(3){
+
+        #seventh>div:nth-child(3) {
             margin-top: 15px;
             margin-left: 0;
         }
-        #seventh>div:nth-child(4){
+
+        #seventh>div:nth-child(4) {
             margin-top: 15px;
             font-weight: bold;
             font-size: 13px;
+        }
+
+        #midddle {
+            width: 100%;
+            border: 1px solid blue;
+        }
+
+        #middle>div:nth-child(3) {
+            width: 15;
+        }
+
+        #middle>div:nth-child(1) {
+            margin-top: 20px;
+            font-size: 13px;
+            font-weight: bold;
+            margin-left: 17px;
+        }
+
+        #middle>div:nth-child(2) {
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 20px;
+        }
+
+        #middle>div:nth-child(2)>div {
+            width: 15%;
+            height: 280px;
+            border: 1px solid #cacbcf;
+        }
+
+        #middle>div:nth-child(2)>div:nth-child(3),
+        div:nth-child(5),
+        div:nth-child(6) {
+            margin-left: 0;
+        }
+
+        #middle>div:nth-child(2)>div>div:nth-child(1)>img {
+            width: 169.5px;
+            height: 220px;
+        }
+
+        #middle>div:nth-child(2)>div>div:nth-child(2) {
+            font-size: 12px;
+        }
+
+        #middle>div:nth-child(3) {
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 30px;
+            margin-left: 0px;
+        }
+
+        #middle>div:nth-child(3)>div {
+            width: 15%;
+            height: 280px;
+            border: 1px solid #cacbcf;
+        }
+
+        #middle>div:nth-child(3)>div>div:nth-child(1)>img {
+            width: 169.5px;
+            height: 220px;
+        }
+
+        #middle>div:nth-child(3)>div>div:nth-child(2) {
+            font-size: 12px;
+        }
+
+        #middle>div:nth-child(3)>div:nth-child(3) {
+            margin-left: 0;
         }
     </style>
 </head>
@@ -1028,33 +1109,159 @@
                 <div>SIMILAR PRODUCTS</div>
                 <div>
                     <div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <img src="./image/1.png" alt="1">
+                        </div>
+                        <div>
+                            <b>Roadster</b></br>
+                            Solid Round Neck T-shirt</br>
+                            <b>Rs. 349(30% OFF)</b>
+                        </div>
                     </div>
                     <div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <img src="./image/2.png" alt="1">
+                        </div>
+                        <div>
+                            <b>HRX by Hrithik Roshan</b></br>
+                            Rapid Dry Training T-shirt</br>
+                            <b>Rs. 659(40% OFF)</b>
+                        </div>
                     </div>
                     <div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <img src="./image/3.png" alt="1">
+                        </div>
+                        <div>
+                            <b>Roadster</b></br>
+                            Men Solid T-shirt</br>
+                            <b>Rs. 347(42% OFF)</b>
+                        </div>
                     </div>
                     <div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <img src="./image/4.png" alt="1">
+                        </div>
+                        <div>
+                            <b>Roadster</b></br>
+                            Solid Round Neck Pure Cotton T-shirt</br>
+                            <b>Rs. 359(40% OFF)</b>
+                        </div>
                     </div>
                     <div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <img src="./image/5.png" alt="1">
+                        </div>
+                        <div>
+                            <b>Roadster</b></br>
+                            Drop-Shoulder T-shirt</br>
+                            <b>Rs. 349(50% OFF)</b>
+                        </div>
                     </div>
                     <div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <img src="./image/6.png" alt="1">
+                        </div>
+                        <div>
+                            <b>Roadster</b></br>
+                            Solid Round Neck T-shirt</br>
+                            <b>Rs. 324(35% OFF)</b>
+                        </div>
                     </div>
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <img src="./image/7.png" alt="1">
+                        </div>
+                        <div>
+                            <b>WROGN</b></br>
+                            Men Pure Cotton T-shirt</br>
+                            <b>Rs. 659(45% OFF)</b>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./image/8.png" alt="1">
+                        </div>
+                        <div>
+                            <b>HERE&NOW</b></br>
+                            Solid Round Neck T-shirt</br>
+                            <b>Rs. 384(45% OFF)</b>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./image/9.png" alt="1">
+                        </div>
+                        <div>
+                            <b>HRX by Hrithik Roshan</b></br>
+                            Men Cotton Pure Cotton T-shirt</br>
+                            <b>Rs. 449(50% OFF)</b>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./image/10.png" alt="1">
+                        </div>
+                        <div>
+                            <b>Roadster</b></br>
+                            Solid Round Neck T-shirt</br>
+                            Rs. 349(30% OFF)<b></b>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./image/11.png" alt="1">
+                        </div>
+                        <div>
+                            <b>HIGHLANDER</b></br>
+                            Solid Round Neck T-shirt</br>
+                            <b>Rs. 301(45% OFF)</b>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./image/12.png" alt="1">
+                        </div>
+                        <div>
+                            <b>Bewakoof</b></br>
+                            Solid Round Neck Pure Cotton </br>
+                            <b>Rs. 459(Rs. 740 OFF)</b>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="footer">
+                <div>
+                    <div>
+                        <div>
+                            <div>
+                                ONLINE SHOPPING
+                            </div>
+                            <div>
+                                Men</br>
+                                Women</br>
+                                Kids</br>
+                                Home & Living</br>
+                                Beauty</br>
+                                Gift Cards</br>
+                                Myntra Insider
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </div>
                 <div></div>
             </div>
-            <div id="footer"></div>
         </div>
 </body>
 
