--- a/index.html
+++ b/index.html
@@ -124,14 +124,12 @@
 
         #top {
             width: 100%;
-            border: 1px solid black;
             display: flex;
             justify-content: space-between;
         }
 
         #leftside1 {
             width: 58%;
-            border: 1px solid red;
             display: flex;
             flex-wrap: wrap;
             margin-left: 10px;
@@ -162,7 +160,6 @@
 
         #rightside1 {
             width: 40%;
-            border: 1px solid red;
         }
 
         #rightside1>div {
@@ -806,6 +803,103 @@
         #middle>div:nth-child(3)>div:nth-child(3) {
             margin-left: 0;
         }
+        #footer{
+            width: 100%;
+            margin-top: 50px;
+            background-color: #fafbfc;
+        }
+        #top1{
+            display: flex;
+            margin-left: 150px;
+            font-size: 13px;
+        }
+        #top1>div:nth-child(1){
+            margin-top: 25px;
+            height: 250px;
+            width: 12%;
+        }
+        #top1>div:nth-child(1)>div:nth-child(1)>div:nth-child(1){
+            font-size: 12px;
+        }
+        #top1>div:nth-child(1)>div:nth-child(1)>div:nth-child(2){
+            margin-top: 10px;
+        }
+        #top1>div:nth-child(1)>div:nth-child(2)>div:nth-child(1){
+            font-size: 12px;
+            margin-top: 20px;
+        }
+        #top1>div:nth-child(1)>div:nth-child(2)>div:nth-child(2){
+            margin-top: 10px;
+        }
+        #top1>div:nth-child(2){
+            margin-top: 25px;
+            margin-left: 50px;
+            height: 180px;
+            width: 14%;
+        }
+        #top1>div:nth-child(2)>div:nth-child(1){
+            font-size: 12px;
+        }
+        #top1>div:nth-child(2)>div:nth-child(2){
+            margin-top: 10px;
+        }
+        #top1>div:nth-child(3){
+            margin-top: 25px;
+            margin-left: 40px;
+            height: 120px;
+            width: 24%;
+        }
+        #top1>div:nth-child(3)>div:nth-child(1){
+            font-size: 12px;
+        }
+        #top1>div:nth-child(3)>div:nth-child(2){
+            margin-top: 10px;
+        }
+        #top1>div:nth-child(3)>div:nth-child(2)>img{
+            height: 30px;
+            width: 100px;
+            border-radius: 5px;
+            margin-right: 8px;
+        }
+        #top1>div:nth-child(3)>div:nth-child(3){
+            margin-top: 10px;
+            margin-left: 0;
+        }
+        #top1>div:nth-child(3)>div:nth-child(3)>div:nth-child(1){
+            font-size: 12px;
+        }
+        #top1>div:nth-child(3)>div:nth-child(3)>div:nth-child(2){
+            margin-top: 10px;
+            font-size: 20px;
+            color: #7c7d91;
+        }
+        #top1>div:nth-child(3)>div:nth-child(3)>div:nth-child(2)>i{
+            margin-right: 8px;
+        }
+        #top1>div:nth-child(4){
+            margin-top: 25px;
+            margin-left: 40px;
+            height: 80px;
+            width: 19%;
+        }
+        #top1>div:nth-child(4)>div:nth-child(2){
+            margin-top: 15px;
+        }
+        #bottom2{
+            margin-top: 20px;
+            font-size: 13px;
+            margin-left: 150px;
+            width: 75%;
+            margin-bottom: 25px;
+        }
+        #bottom2>div:nth-child(1){
+            font-size: 12px;
+        }
+        #bottom2>div:nth-child(2){
+            margin-top: 10px;
+        }
+
+
     </style>
 </head>
 
@@ -1233,11 +1327,11 @@
                 </div>
             </div>
             <div id="footer">
-                <div>
+                <div id="top1">
                     <div>
                         <div>
                             <div>
-                                ONLINE SHOPPING
+                                <b>ONLINE SHOPPING</b>
                             </div>
                             <div>
                                 Men</br>
@@ -1251,16 +1345,61 @@
                         </div>
                         <div>
                             <div>
-                                
+                                <b>USEFUL LINKS</b>
                             </div>
-                            <div></div>
+                            <div>
+                                Blog</br>
+                                Careers</br>
+                                Site Map</br>
+                                Corporate Information</br>
+                                Whitehat
+                            </div>
                         </div>
                     </div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                        <div>
+                            <b>CUSTOMER POLICIES</b>
+                        </div>
+                        <div>
+                            Contact Us</br>
+                            FAQ</br>
+                            T&C</br>
+                            Terms Of Use</br>
+                            Track Orders</br>
+                            Shipping</br>
+                            Cancellation</br>
+                            Returns</br>
+                            Privacy policy</br>
+                            Grievance Officer
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <b>EXPERIENCE MYNTRA APP ON MOBILE</b>
+                        </div>
+                        <div>
+                            <img src="./image/mobile.png" alt="1">
+                            <img src="./image/apple.png" alt="1">
+                        </div>
+                        <div>
+                            <div><b>KEEP IN TOUCH</b></div>
+                            <div>
+                                <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-square-facebook"></i>
+                                <i class="fa-brands fa-youtube"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div><b>100% ORIGINAL</b> guarantee for all products at myntra.com</div>
+                        <div><b>Return within 30days</b> of receiving your order</div>
+                    </div>
                 </div>
-                <div></div>
+                <div id="bottom2">
+                    <div><b>POPULAR SEARCHES</b></div>
+                    <div>Kurta Pajama | Leather Jackets | Sherwani | Shirts | T-Shirts | Waistcoat | Photo Frames | Denim shirts | Blazers | Mirror | Bags | Jackets | Blouse Designs | Crop Tops | Mysore Silk Saree | Kids Lehenga | Suit Design | Lehenga | Girls Dungarees | Top for Girl | Lingerie | Gowns | Saree | Kids Ethnic Wear | Sweaters | Boys Games | Barbie Doll | Shoes For Men | Cricket Shoes | Lipstick | Make Up Kit | Fastrack Watches | Casual Shoes | Online Shopping | Dresses | Babydolls | Eye Makeup | Car Games | Nike Shoes | Puma | United Colors of Benetton | Fastrack | Watches | Backpacks | Men Kurtas | Titan Watches</div>
+                </div>
             </div>
         </div>
 </body>
