--- a/index.html
+++ b/index.html
@@ -929,9 +929,10 @@
                     <button>Update</button>
                 </div>
                 <div>
-                    <div>
+                    <div><a href="/login.html">
                         <i class="fa-solid fa-user"></i>
                         <h6>Profile</h6>
+                    </a>
                     </div>
                     <div>
                         <i class="fa-solid fa-heart"></i>
