--- a/register.html
+++ b/register.html
@@ -69,6 +69,7 @@
                 <label>Password</label><br />
                 <input id="password" type="password" /><br />
                 <input style="background-color: #ff3f6c; color: white; border: none; outline: none; height: 30px; font-size: 10px; font-weight: bold; cursor: pointer; margin-top: 15px;" type="submit" value="Register"/>
+                <a href="./forgetPassword.html">Forget Password</a>
                 <p style="margin-top: 20px;">Have trouble registered? Get help</p>
             </form>
             <!-- <button  onclick="window.location.href='/login.html'">Login</button> -->
