--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
                 <label>Password:</label><br />
                 <input id="userPassword" type="password" /><br /><br />
                 <p>By registered, I agree to the Terms of Use & Privacy Policy</p>
-                <input style="background-color: #ff3f6c; color: white; border: none; outline: none; height: 30px; font-size: 10px; font-weight: bold; cursor: pointer; margin-top: 15px;" type="Submit" value="LOGIN" />
+                <input style="background-color: #ff3f6c; color: white; border: none; outline: none; height: 30px; font-size: 10px; font-weight: bold; cursor: pointer; margin-top: 15px;" type="Submit" value="REGISTER" />
                 
                 <p style="margin-top: 20px;">Have trouble logging in? Get help</p>
             </form>
