--- a/show-products.html
+++ b/show-products.html
@@ -245,6 +245,7 @@
 
         #right-side2 {
             width: 70%;
+            /* padding-bottom: 50px; */
         }
 
         #right-side2>div:nth-child(1) {
@@ -275,7 +276,7 @@
 
         #picture2 {
             margin-top: 20px;
-            height: 460px;
+            /* height: 460px; */
             width: 23%;
 
             /* border: 2px solid black; */
@@ -305,7 +306,7 @@
 
          #footer {
             width: 100%;
-            margin-top: 50px;
+            margin-top: 300px;
             background-color: #fafbfc;
         }
 
